Stacks and queues

--- a/Coursera/Princeton/Algorithms-Part-1/Week 2/1. Stacks and Queues.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 2/1. Stacks and Queues.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -568,11 +568,108 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Iterators\n",
+    "\n",
+    "Iterators allow to iterate over the items by a client without revealing the internal representation of the stack or queue. In Java, an object is iterable when it has a method that returns an iterator. In order to implement it, we must have a method called `has_next()` and another called `next()`. In the former, we verify whether exists a next item in the stack/queue. In the later, we return the next item of the stack/queue. As an example, in Java we have the following code that implements the iterator:\n",
+    "\n",
+    "```java\n",
+    "import java.util.Iterator;\n",
+    "\n",
+    "public class Stack<Item> iterator() {\n",
+    "    return new ListIterator();\n",
+    "\n",
+    "\n",
+    "    private class ListIterator implements Iterator<Item> {\n",
+    "        private Node current = first;\n",
+    "     \n",
+    "        private boolean hasNext() {\n",
+    "            return current != null;\n",
+    "        }\n",
+    "\n",
+    "        public Item next() {\n",
+    "            Item item = current.item;\n",
+    "            current = current.next;\n",
+    "            return item;\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "## Bag API\n",
+    "\n",
+    "Bag API works by adding items to a collection and iterating over them without considering the order of the elements. The image below illustrates how Bag API works:\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/bag_api.svg\" width=\"60%\" align=\"center\"/>\n",
+    "\n",
+    "In Java, its implementation is as follows:\n",
+    "\n",
+    "```java\n",
+    "public class Bag<Item> implements Iterable<Item>{\n",
+    "    Bag()                     //create an empty bag\n",
+    "    void add(Item x)          //inserting a new item onto the bag\n",
+    "    int size()                //number of items in bag\n",
+    "    Iterable<Item> iterator() //iterator for all items in bag\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applications\n",
+    "\n",
+    "A Stack can be used for arithmetic expression evaluation, where the goal is to evaluate infix expressions. For example, the Two-Stack Algorithm by E. W. Dijkstra. In this algorithm, we evaluate infix expressions by manipulate elements surrounded by parentheses using two stacks: the *value stack* and the *operator stack*. The *value stack* maintains numbers of the expressions and the *operator stack* maintains the operators of the operations. In this algorithm, when we find a left parenthesis `(` no action is taken, when we find a number, it is pushed onto the *value stack*, when we find an operator, it is pushed onto the *operator stack*, and when we find a right parenthesis `)`, we pop two values and one operator, perform their operation and push the resulting value back onto the *value stack*. An example of the operation `( 1 + ( ( 2 + 3 ) * ( 4 * 5 ) ) ))` is illustrated below: \n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/two_stack_algorithm.svg\" width=\"80%\" align=\"center\"/>\n",
+    "\n",
+    "This algorithm works by solving inner expressions to outer expressions. Thus, when the algorithm encounters an operator surrounded by two values within a parentheses, it leaves the result on the value stack. This process is repeated up to the last parenthesis, solving the equation.\n",
+    "\n",
+    "A Python implementation of this algorithm can be seen below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evaluate(expression):\n",
+    "    value_stack = ResizingArrayStackOfStrings()\n",
+    "    operator_stack = ResizingArrayStackOfStrings()\n",
+    "    \n",
+    "    for v in expression:\n",
+    "        if v == '(' or v == ' ':\n",
+    "            continue\n",
+    "        elif v in ['+', '-', '*', '/']:\n",
+    "            operator_stack.push(v)\n",
+    "        elif v == ')':\n",
+    "            op = operator_stack.pop()\n",
+    "            if op == '+': \n",
+    "                value_stack.push(value_stack.pop() + value_stack.pop())\n",
+    "            elif op == '-': \n",
+    "                value_stack.push(value_stack.pop() - value_stack.pop())\n",
+    "            elif op == '*': \n",
+    "                value_stack.push(value_stack.pop() * value_stack.pop())\n",
+    "            elif op == '/': \n",
+    "                value_stack.push(value_stack.pop() / value_stack.pop())\n",
+    "        else:\n",
+    "            value_stack.push(int(v))\n",
+    "    return value_stack.pop()\n",
+    "\n",
+    "exp = '( 1 + ( ( 2 + 3 ) * ( 4 * 5 ) ) ))'\n",
+    "print(evaluate(exp))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -654,8 +751,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&#9744; "
+    "6. Suppose that we copy the iterator code from our linked list and resizing array implementations of a stack to the corresponding implementations of a queue. Which queue iterator(s) will correctly return the items in FIFO order?<br>\n",
+    "\n",
+    "&#9744; neither<br>\n",
+    "&#9745; linked-list iterator only<br>\n",
+    "&#9744; array iterator only<br>\n",
+    "&#9744; both\n",
+    "\n",
+    "**Answer**: The linked-list iterator will work without modification because the items in the linked list are ordered in FIFO order (which is the main reason we dequeue from the front and enqueue to the back instead of vice versa). The array iterator will fail for two reasons. First, the the items should be iterated over in the opposite order. Second, the items will not typically be stored in the array as entries $0$ to $n−1$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. What does the following code fragment print?<br>\n",
+    "\n",
+    "```java\n",
+    "int n = 50;\n",
+    "Stack<Integer> stack = new Stack<Integer>();\n",
+    "\n",
+    "while (n > 0) {\n",
+    "    stack.push(n % 2);\n",
+    "    n = n / 2;\n",
+    "}\n",
+    "for (int digit : stack) {\n",
+    "    StdOut.print(digit);\n",
+    "}\n",
+    "StdOut.println();\n",
+    "```\n",
+    "\n",
+    "&#9744; 010011<br>\n",
+    "&#9744; 010111<br>\n",
+    "&#9744; 111010<br>\n",
+    "&#9745; 110010 \n",
+    "\n",
+    "**Answer**: The first step is to stack only resulting values of the division by two (digit 0 or 1). Thus, we have the while over the values `50 25 12 6 3 1` with the resulting division by 2 `0 1 0 0 1 1`. As the elements are stored onto the stack, the order in which they are retrieved is the oposite as they are inserted, and thus, the correct answer is `1 1 0 0 1 1`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interview Questions: Stacks and Queues\n",
+    "\n",
+    "1. **Queue with two stacks**. Implement a queue with two stacks so that each queue operations takes a constant amortized number of stack operations.\n",
+    "\n",
+    "**Answer**: We can use two stacks to create a queue. In our implementation, one stack will serve to `enqueue` and the other to `dequeue` elements. We only change elements from one stack to the other when the stack of `dequeue` contains zero elements and we still have elements in the `enqueue` stack. The figure below illustrates the process of enqueue and dequeue using the two stacks.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/2stack_queue.svg\" width=\"100%\" align=\"center\"/>\n",
+    "\n",
+    "Below the code to run a queue using two stacks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dequeue 1st item: 0\n",
+      "Dequeue 2nd item: 1\n",
+      "Dequeue 3rd item: 2\n",
+      "Dequeue 4th item: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Queue2Stacks(object):\n",
+    "    def __init__(self):\n",
+    "        self.st_enqueue = ResizingArrayStackOfStrings()\n",
+    "        self.st_dequeue = ResizingArrayStackOfStrings()\n",
+    "        self.size = 0\n",
+    "        \n",
+    "    def enqueue(self, item):\n",
+    "        self.st_enqueue.push(item)\n",
+    "        self.size += 1\n",
+    "        \n",
+    "    def dequeue(self):\n",
+    "        if self.st_dequeue.is_empty():\n",
+    "            if self.st_enqueue.is_empty():\n",
+    "                raise Exception('ERROR: Cannot retrieve element [Underflow]')\n",
+    "            else:\n",
+    "                while not self.st_enqueue.is_empty():\n",
+    "                    self.st_dequeue.push(self.st_enqueue.pop())\n",
+    "        self.size -= 1\n",
+    "        return self.st_dequeue.pop()\n",
+    "        \n",
+    "    def is_empty(self):\n",
+    "        if self.st_enqueue.is_empty() and self.st_dequeue.is_empty():\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return self.size\n",
+    "\n",
+    "values = [0, 1, 2, 3]\n",
+    "q2s = Queue2Stacks()\n",
+    "q2s.enqueue(0)\n",
+    "q2s.enqueue(1)\n",
+    "q2s.enqueue(2)\n",
+    "print('Dequeue 1st item: {}'.format(q2s.dequeue()))\n",
+    "print('Dequeue 2nd item: {}'.format(q2s.dequeue()))\n",
+    "q2s.enqueue(3)\n",
+    "print('Dequeue 3rd item: {}'.format(q2s.dequeue()))\n",
+    "print('Dequeue 4th item: {}'.format(q2s.dequeue()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. **Stack with max**. Create a data structure that efficiently supports the stack operations (push and pop) and also a return-the-maximum operation. Assume the elements are real numbers so that you can compare them.\n",
+    "\n",
+    "**Answer**: For this structure, called StackWithMax, we have a normal stack that manipulates all items (push and pop operations), and another stack to control the maximum values. For each new item added in the regular stack, this stack (hereafter called max stack) will add a new element too. This element is the maximum value between the value of the element in the top and the new item to be added. When we pop the regular stack, the max stack also has its item removed from the top. The image below illustrates the push and pop operations for the new data structure considering both stacks.  \n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/max_stack.svg\" width=\"100%\" align=\"center\"/>\n",
+    "\n",
+    "Below the code that implements the StackWithMax structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StackWithMax(object):\n",
+    "    def __init__(self):\n",
+    "        self.st_regular = ResizingArrayStackOfStrings()\n",
+    "        self.st_max = ResizingArrayStackOfStrings()\n",
+    "        self.size = 0\n",
+    "        \n",
+    "    def enqueue(self, item):\n",
+    "        self.st_enqueue.push(item)\n",
+    "        self.size += 1\n",
+    "        \n",
+    "    def dequeue(self):\n",
+    "        if self.st_dequeue.is_empty():\n",
+    "            if self.st_enqueue.is_empty():\n",
+    "                raise Exception('ERROR: Cannot retrieve element [Underflow]')\n",
+    "            else:\n",
+    "                while not self.st_enqueue.is_empty():\n",
+    "                    self.st_dequeue.push(self.st_enqueue.pop())\n",
+    "        self.size -= 1\n",
+    "        return self.st_dequeue.pop()\n",
+    "        \n",
+    "    def is_empty(self):\n",
+    "        if self.st_enqueue.is_empty() and self.st_dequeue.is_empty():\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return self.size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. **Java generics**. Explain why Java prohibits generic array creation.\n",
+    "\n",
+    "**Answer**: Java prohibits generic array creation because it implements Generics on the compiler level and the information of type parameters is discarded by the compiler after compilation. As types are discarded, it is not available at runtime, which means that when creating a generic array the runtime cannot know the type of the array, generating an error. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -674,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
