--- a/Coursera/Princeton/Algorithms-Part-1/Week 2/2. Elementary Sorts.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 2/2. Elementary Sorts.ipynb
@@ -187,6 +187,224 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Selection Sort\n",
+    "\n",
+    "The idea of selection sort, is start out with a unsorted array and for each iteration, we go through the array to try to find the smallest remaining entry. Then we swap that with the first entry in the remaining array and move it to the final order of the array. We go to the next entry of the remaining array and try to find the smallest remaining entry, and so on. \n",
+    "\n",
+    "The image below illustrates this idea when first we go through the array to find the minimum value (\"2\") and swap it with the first element (index i=0). After performing the swap, we increase the index by one and perform a new search for the minimum value in the remaining entries. We find the minimum value (\"3\") and swap it by the element in index i=1. After swapping, we increase the index by one and perform a search in the remaining entries. This process continues up to the end of the array.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/selection_sort.svg\" width=\"70%\" align=\"center\"/>\n",
+    "\n",
+    "Here, we use the image below to illustrate how to implement the algorithm. Thus, consider that the red arrow scans from left to right, entries the left of the red arrow are fixed and in ascending order. No entry to its right is smaller than any entry to its left. \n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/selection_sort_algorithm.svg\" width=\"70%\" align=\"center\"/>\n",
+    "\n",
+    "\n",
+    "\n",
+    "The steps follow:\n",
+    "\n",
+    "- Move the pointer to the right\n",
+    "```python\n",
+    "i += 1\n",
+    "```\n",
+    "- Identify the index of minimum entry on the right\n",
+    "```python\n",
+    "valmin = i\n",
+    "for j in range(i+1, N):\n",
+    "    if less(vec[j], vec[valmin]):\n",
+    "        valmin = j\n",
+    "```\n",
+    "- Exchange into position \n",
+    "```python\n",
+    "exchange(vec, i, valmin)\n",
+    "```\n",
+    "\n",
+    "The full implementation is as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random init: [7, 10, 5, 3, 8, 4, 2, 9, 6]\n",
+      "Sorted init: [2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Integer(Comparable):\n",
+    "    def __init__(self, v):\n",
+    "        self.v = v\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        print(self.v)\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return str(self.v)\n",
+    "        \n",
+    "    def compare_to(self, w):\n",
+    "        if self.v < w.v: return -1\n",
+    "        if self.v > w.v: return 1\n",
+    "        return 0\n",
+    "    \n",
+    "\n",
+    "class Selection(object):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def sort(self, vec):\n",
+    "        N = len(vec)\n",
+    "        for i in range(N):\n",
+    "            minval = i\n",
+    "            for j in range(i+1, N):\n",
+    "                if self.less(vec[j], vec[minval]):\n",
+    "                    minval = j\n",
+    "            self.exchange(vec, i, minval)\n",
+    "            #print(vec)\n",
+    "        return vec\n",
+    "\n",
+    "    def less(self, v, w):\n",
+    "        return v.compare_to(w) < 0\n",
+    "\n",
+    "    def exchange(self, vec, i, j):\n",
+    "        swap = vec[i]\n",
+    "        vec[i] = vec[j]\n",
+    "        vec[j] = swap\n",
+    "        return vec\n",
+    "\n",
+    "# Test the implementation\n",
+    "vec = [Integer(7), Integer(10), Integer(5), Integer(3), Integer(8), \n",
+    "       Integer(4), Integer(2), Integer(9), Integer(6)]\n",
+    "s = Selection()\n",
+    "print('Random init: {}'.format(vec))\n",
+    "print('Sorted init: {}'.format(s.sort(vec)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selection Sort uses ($N-1$) + ($N-2$) + ... + $1$ + $0 \\sin N^2/2$ comparisons and $N$ exchanges, as illustred in the table below: \n",
+    "\n",
+    "| i  | min |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |   10   |\n",
+    "| -- | --- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ------ |\n",
+    "| #  | #   | **S** | **O** | **R** | **T** | **E** | **X** | **A** | **M** | **P** | **L** | **E**  |\n",
+    "| 0  | 6   |   S   |   O   |   R   |   T   |   E   |   X   | **A** |   M   |   P   |   L   |   E    |\n",
+    "| 1  | 4   |   A   |   O   |   R   |   T   | **E** |   X   |   S   |   M   |   P   |   L   |   E    |\n",
+    "| 2  | 10  |   A   |   E   |   R   |   T   |   O   |   X   |   S   |   M   |   P   |   L   | **E**  |\n",
+    "| 3  | 9   |   A   |   E   |   E   |   T   |   O   |   X   |   S   |   M   |   P   | **L** |   R    |\n",
+    "| 4  | 7   |   A   |   E   |   E   |   L   |   O   |   X   |   S   | **M** |   P   |   T   |   R    |\n",
+    "| 5  | 7   |   A   |   E   |   E   |   L   |   M   |   X   |   S   | **O** |   P   |   T   |   R    |\n",
+    "| 6  | 8   |   A   |   E   |   E   |   L   |   M   |   O   |   S   |   X   | **P** |   T   |   R    |\n",
+    "| 7  | 10  |   A   |   E   |   E   |   L   |   M   |   O   |   P   |   X   |   S   |   T   | **R**  |\n",
+    "| 8  | 8   |   A   |   E   |   E   |   L   |   M   |   O   |   P   |   R   | **S** |   T   |   X    |\n",
+    "| 9  | 9   |   A   |   E   |   E   |   L   |   M   |   O   |   P   |   R   |   S   | **T** |   X    |\n",
+    "| 10 | 10  |   A   |   E   |   E   |   L   |   M   |   O   |   P   |   R   |   S   |   T   | **X**  |\n",
+    "\n",
+    "An example of the algorithm working can be seen below:\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/heray1990/AlgorithmVisualization/master/images/selection_sort_50samples_fps30_dpi50.gif\" width=\"40%\">\n",
+    "\n",
+    "This algorithm takes quadratic time (even if the input is sorted), with a linear number of exchanges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Insertion Sort\n",
+    "\n",
+    "Insertion sort is another elementary method that interestingly has quite different performance characteristics than Selection sort. For insertion sort, we will move an index $i$ from left to right and in the $i$'th iteration, we are going to move $vec[i]$ into position among the elements to its left. We consider that everything from $i$ to its left is sorted (in ascending order) and everything from its right is unseen. Then, we increment $i$, seen a new element (which is unordered). We use another index ($j$) that starts at $i$ going to the left. This index $j$ swaps the current element ($vec[i]$ with its higher element at the left $vec[j]$ when $vec[i]$ is less than $vec[j]$. It stops swapping when $vec[j]$ is smaller than $vec[i]$. We then increase $i$, showing a new element. This process goes up to the end of the array. The image below illustrates the insertion sort algorithm using cards.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/insertion_sort.svg\" width=\"70%\" align=\"center\"/>\n",
+    "\n",
+    "Here, we use the image below to illustrate how to implement the algorithm. Thus, consider that the red arrow scans from left to right, entries the left of the red arrow are sorted in ascending order. Entries to its right are not seen yet. \n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/insertion_sort_algorithm.svg\" width=\"70%\" align=\"center\"/>\n",
+    "\n",
+    "The steps follow:\n",
+    "\n",
+    "- Move the pointer to the right\n",
+    "```python\n",
+    "i += 1\n",
+    "```\n",
+    "- Move $j$ from right to left and swap $vec[i]$ when its less than $vec[j]$\n",
+    "```python\n",
+    "for j in range(i-1, -1, -1):\n",
+    "    if less(vec[j], vec[j-1]):\n",
+    "        exchange(vec, j, j-1)\n",
+    "```\n",
+    "\n",
+    "The full implementation is as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Insertion(object):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def sort(self, vec):\n",
+    "        N = len(vec)\n",
+    "        for i in range(N):\n",
+    "            minval = i\n",
+    "            for j in range(i+1, N):\n",
+    "                if self.less(vec[j], vec[minval]):\n",
+    "                    minval = j\n",
+    "            self.exchange(vec, i, minval)\n",
+    "            #print(vec)\n",
+    "        return vec\n",
+    "\n",
+    "    def less(self, v, w):\n",
+    "        return v.compare_to(w) < 0\n",
+    "\n",
+    "    def exchange(self, vec, i, j):\n",
+    "        swap = vec[i]\n",
+    "        vec[i] = vec[j]\n",
+    "        vec[j] = swap\n",
+    "        return vec\n",
+    "\n",
+    "# Test the implementation\n",
+    "vec = [Integer(7), Integer(10), Integer(5), Integer(3), Integer(8), \n",
+    "       Integer(4), Integer(2), Integer(9), Integer(6)]\n",
+    "s = Selection()\n",
+    "print('Random init: {}'.format(vec))\n",
+    "print('Sorted init: {}'.format(s.sort(vec)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An example of the algorithm working can be seen below:\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/heray1990/AlgorithmVisualization/master/images/insertion_sort_50samples_fps30_dpi50.gif\" width=\"40%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Questions"
    ]
   },
@@ -225,11 +443,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. How many compares does selection sort make when the input array is already sorted?<br>\n",
+    "\n",
+    "&#9744; logarithmic<br>\n",
+    "&#9744; linear<br>\n",
+    "&#9745; quadratic<br>\n",
+    "&#9744; exponential"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. How many compares does insertion sort make on an input array that is already sorted?<br>\n",
+    "\n",
+    "&#9744; constant<br>\n",
+    "&#9744; logarithmic<br>\n",
+    "&#9745; linear<br>\n",
+    "&#9744; quadratic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "&#9744; "
+   ]
   }
  ],
  "metadata": {
